@@ -825,8 +825,8 @@ pixels. If the return code is not \texttt{wxTE\_HT\_UNKNOWN} the row and column
 of the character closest to this position are returned in the \arg{col} and 
 \arg{row} parameters (unless the pointers are {\tt NULL} which is allowed).
 
-Please note that this function is currently only implemented in wxUniv and
-wxMSW ports.
+Please note that this function is currently only implemented in wxUniv,
+wxMSW and wxGTK2 ports.
 
 \wxheading{See also}
 
